force-app/main/default/objects/Service_Agreement__c/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Active Products</label>
    <summaryFilterItems>
        <field>Service_Agreement_Products__c.End_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Agreement_Products__c.CallRevu_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>