force-app/main/default/objects/Service_Agreement__c/fields/Open_QBR_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_QBR_Cases__c</fullName>
    <formula>Service_Location__r.Open_QBR_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open QBR Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>