force-app/main/default/objects/Service_Agreement__c/fields/Opportunity_for_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Expansion__c</fullName>
    <label>Opportunity for Expansion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>Multi Roof Top</fullName>
            </value>
            <value>
                <fullName>None – Single Point with all Services</fullName>
            </value>
            <value>
                <fullName>Service Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>