force-app/main/default/objects/Service_Agreement__c/fields/Originating_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity_Amount__c</fullName>
    <formula>Originating_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Originating Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>