force-app/main/default/objects/Service_Agreement__c/fields/Originating_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity_Type__c</fullName>
    <formula>Originating_Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Originating Opportunity Type</label>
    <type>Text</type>
</CustomField>