force-app/main/default/objects/Service_Agreement__c/fields/Outbound_C2C_Included__c.field-meta.xml
<CustomField>
    <fullName>Outbound_C2C_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound / C2C Included</label>
    <type>Checkbox</type>
</CustomField>