force-app/main/default/objects/Service_Agreement__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>Performance_Manager__r.Manager.FirstName + &quot; &quot; + Performance_Manager__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>