force-app/main/default/objects/Service_Agreement__c/fields/Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement__c</fullName>
    <label>Parent Agreement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>