force-app/main/default/objects/Service_Agreement__c/fields/Parent_Last_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Last_Touch_Date__c</fullName>
    <formula>Service_Location__r.Parent.Last_Touchpoint_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Last Touch Date</label>
    <type>DateTime</type>
</CustomField>