force-app/main/default/objects/Service_Agreement__c/fields/Partner_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Partner_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Implementation</label>
    <type>Checkbox</type>
</CustomField>