force-app/main/default/objects/Service_Agreement__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <formula>TEXT(Referral_Partner__r.Partner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>