force-app/main/default/objects/Service_Agreement__c/fields/Performance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Performance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Success Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>