force-app/main/default/objects/Service_Agreement__c/fields/Pooling_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Pooling_Minutes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Client has minutes being pooled.</inlineHelpText>
    <label>Pooling Minutes</label>
    <type>Checkbox</type>
</CustomField>