force-app/main/default/objects/Service_Agreement__c/fields/Preferred_Contact_For_Billing__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_For_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Contact For Billing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CallRevu_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>