force-app/main/default/objects/Service_Agreement__c/fields/Previous_Solution__c.field-meta.xml
<CustomField>
    <fullName>Previous_Solution__c</fullName>
    <label>Previous Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advent</fullName>
            </value>
            <value>
                <fullName>Arcadium</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>CarResearch</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>D2C Media</fullName>
            </value>
            <value>
                <fullName>DealerMine</fullName>
            </value>
            <value>
                <fullName>DealerPeak</fullName>
            </value>
            <value>
                <fullName>DealerSocket</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>DriveCentric</fullName>
            </value>
            <value>
                <fullName>eLead1</fullName>
            </value>
            <value>
                <fullName>HigherGear</fullName>
            </value>
            <value>
                <fullName>Interactive360</fullName>
            </value>
            <value>
                <fullName>LIS CRM</fullName>
            </value>
            <value>
                <fullName>Momentum</fullName>
            </value>
            <value>
                <fullName>Opolgic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ProMax</fullName>
            </value>
            <value>
                <fullName>VinSolutions</fullName>
            </value>
            <value>
                <fullName>Votenza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>