force-app/main/default/objects/Service_Agreement__c/fields/Previous_Solution_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Previous_Solution_Sub_Source__c</fullName>
    <label>Previous Solution Sub Source</label>
    <type>TextArea</type>
</CustomField>