force-app/main/default/objects/Service_Agreement__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>