force-app/main/default/objects/Service_Agreement__c/fields/Primary_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreements (Primary Account Contact)</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>