force-app/main/default/objects/Service_Agreement__c/fields/Quarterly_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Close_Date__c</fullName>
    <label>Quarterly Close Date</label>
    <type>DateTime</type>
</CustomField>