force-app/main/default/objects/Service_Agreement__c/fields/Quarterly_Review__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Review__c</fullName>
    <label>Quarterly Review</label>
    <type>DateTime</type>
</CustomField>