force-app/main/default/objects/Service_Agreement__c/fields/Ready_To_Sync_To_CallRevu360__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Sync_To_CallRevu360__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when your are ready to create the Account in CallRevu360</inlineHelpText>
    <label>Ready To Sync To CallRevu360</label>
    <type>Checkbox</type>
</CustomField>