force-app/main/default/objects/Service_Agreement__c/fields/Returning_From_Import_Employees__c.field-meta.xml
<CustomField>
    <fullName>Returning_From_Import_Employees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returning From Import Employees</label>
    <type>Checkbox</type>
</CustomField>