force-app/main/default/objects/Service_Agreement__c/fields/Review_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Close_Date__c</fullName>
    <label>Review Close Date</label>
    <type>DateTime</type>
</CustomField>