force-app/main/default/objects/Service_Agreement__c/fields/Review_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Review_Cycle__c</fullName>
    <label>Review Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Ramp Up Monthly</fullName>
            </value>
            <value>
                <fullName>--Not Assigned--</fullName>
                <default>true</default>
                <label>--Not Assigned--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>