force-app/main/default/objects/Service_Agreement__c/fields/Roster_Received__c.field-meta.xml
<CustomField>
    <fullName>Roster_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roster Received</label>
    <type>Checkbox</type>
</CustomField>