force-app/main/default/objects/Service_Agreement__c/fields/Routing_Approval_received_for_new_lines__c.field-meta.xml
<CustomField>
    <fullName>Routing_Approval_received_for_new_lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routing Approval received for new lines</label>
    <type>Checkbox</type>
</CustomField>