force-app/main/default/objects/Service_Agreement__c/fields/RR_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>RR_Case_Count__c</fullName>
    <formula>Service_Location__r.RR_Case_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>