force-app/main/default/objects/Service_Agreement__c/fields/Sales_Vision_Machine_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Sales_Vision_Machine_Summaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Vision Machine Summaries</label>
    <type>Checkbox</type>
</CustomField>