force-app/main/default/objects/Service_Agreement__c/fields/Sat_Closed__c.field-meta.xml
<CustomField>
    <fullName>Sat_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sat Closed</label>
    <type>Checkbox</type>
</CustomField>