force-app/main/default/objects/Service_Agreement__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CallRevu_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>