force-app/main/default/objects/Service_Agreement__c/fields/Send_Account_Update_Link__c.field-meta.xml
<CustomField>
    <fullName>Send_Account_Update_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Account Update Link</label>
    <type>Checkbox</type>
</CustomField>