force-app/main/default/objects/Service_Agreement__c/fields/Send_Authorized_Sender_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Authorized_Sender_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in data collection.  I checked, workflow sends an email.</description>
    <label>Send Authorized Sender Notification</label>
    <type>Checkbox</type>
</CustomField>