force-app/main/default/objects/Service_Agreement__c/fields/Service_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Detail_ID__c</fullName>
    <label>Service Detail ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>