force-app/main/default/objects/Service_Agreement__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Agreement (Service Location)</relationshipLabel>
    <relationshipName>Service_Agreement2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>