force-app/main/default/objects/Service_Agreement__c/fields/Service_Location_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Billing_Address__c</fullName>
    <formula>Service_Location__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location Billing Address</label>
    <type>Text</type>
</CustomField>