force-app/main/default/objects/Service_Agreement__c/fields/Service_Location_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Billing_State__c</fullName>
    <formula>Service_Location__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location Billing State</label>
    <type>Text</type>
</CustomField>