force-app/main/default/objects/Service_Agreement__c/fields/Service_Location_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Billing_Zip__c</fullName>
    <formula>Service_Location__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location Billing Zip</label>
    <type>Text</type>
</CustomField>