force-app/main/default/objects/Service_Agreement__c/fields/Service_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_City__c</fullName>
    <formula>Service_Location__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location City</label>
    <type>Text</type>
</CustomField>