force-app/main/default/objects/Service_Agreement__c/fields/Service_Location_Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Parent_Group__c</fullName>
    <formula>Service_Location__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Location Dealer Group/Parent</label>
    <type>Text</type>
</CustomField>