force-app/main/default/objects/Service_Agreement__c/fields/Service_Vision_Machine_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Service_Vision_Machine_Summaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Vision Machine Summaries</label>
    <type>Checkbox</type>
</CustomField>