force-app/main/default/objects/Service_Agreement__c/fields/Special_Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Account_Notes__c</fullName>
    <label>Special Account Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>