force-app/main/default/objects/Service_Agreement__c/fields/Special_Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Billing_Terms__c</fullName>
    <label>Special Billing Terms</label>
    <type>TextArea</type>
</CustomField>