force-app/main/default/objects/Service_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Enrollment Started</fullName>
            </value>
            <value>
                <fullName>Implementation Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>OK to Launch</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
                <isActive>false</isActive>
                <label>Enrollment</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Launch Approved</fullName>
                <isActive>false</isActive>
                <label>Launch Approved</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Setup In Process</fullName>
                <isActive>false</isActive>
                <label>Setup In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>