force-app/main/default/objects/Service_Agreement__c/fields/Strategic_Account_M__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>