force-app/main/default/objects/Service_Agreement__c/fields/Subaru_NE_LIS__c.field-meta.xml
<CustomField>
    <fullName>Subaru_NE_LIS__c</fullName>
    <label>Subaru NE LIS</label>
    <type>Url</type>
</CustomField>