force-app/main/default/objects/Service_Agreement__c/fields/Sun_Close__c.field-meta.xml
<CustomField>
    <fullName>Sun_Close__c</fullName>
    <defaultValue>TimeValue(&quot;21:00:00.000&quot;)</defaultValue>
    <label>Sun Close</label>
    <type>Time</type>
</CustomField>