force-app/main/default/objects/Service_Agreement__c/fields/Sun_Closed__c.field-meta.xml
<CustomField>
    <fullName>Sun_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sun Closed</label>
    <type>Checkbox</type>
</CustomField>