force-app/main/default/objects/Service_Agreement__c/fields/Sun_Open__c.field-meta.xml
<CustomField>
    <fullName>Sun_Open__c</fullName>
    <defaultValue>TimeValue(&quot;07:00:00.000&quot;)</defaultValue>
    <label>Sun Open</label>
    <type>Time</type>
</CustomField>