force-app/main/default/objects/Service_Agreement__c/fields/Sync_Ad_Sources__c.field-meta.xml
<CustomField>
    <fullName>Sync_Ad_Sources__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you are ready to sync Ad Sources</inlineHelpText>
    <label>Sync Ad Sources</label>
    <type>Checkbox</type>
</CustomField>