force-app/main/default/objects/Service_Agreement__c/fields/Sync_Billing_Items__c.field-meta.xml
<CustomField>
    <fullName>Sync_Billing_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Billing Items</label>
    <type>Checkbox</type>
</CustomField>