force-app/main/default/objects/Service_Agreement__c/fields/Sync_Roster__c.field-meta.xml
<CustomField>
    <fullName>Sync_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when your are ready to syn the Roster.</inlineHelpText>
    <label>Sync Roster</label>
    <type>Checkbox</type>
</CustomField>