force-app/main/default/objects/Service_Agreement__c/fields/Sync_To_CallRevu_360__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_CallRevu_360__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used By the Integration to tell it to resync to CallRevu360</inlineHelpText>
    <label>Sync To CallRevu 360</label>
    <type>Checkbox</type>
</CustomField>