force-app/main/default/objects/Service_Agreement__c/fields/TCX_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>TCX_Account_Number__c</fullName>
    <description>Temporarily housing for TotalCX Native System Account Number</description>
    <inlineHelpText>TotalCX Account Number</inlineHelpText>
    <label>TCX Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>