force-app/main/default/objects/Service_Agreement__c/fields/TCX_Active__c.field-meta.xml
<CustomField>
    <fullName>TCX_Active__c</fullName>
    <formula>if (ISpickval(Tier_Status__c,&quot;TCX&quot;) &amp;&amp; NOT(Ispickval(CallRevu_Account_Status__c,&quot;Cancelled&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCX Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>