force-app/main/default/objects/Service_Agreement__c/fields/Thu_Closed__c.field-meta.xml
<CustomField>
    <fullName>Thu_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thu Closed</label>
    <type>Checkbox</type>
</CustomField>