force-app/main/default/objects/Service_Agreement__c/fields/Thu_Open__c.field-meta.xml
<CustomField>
    <fullName>Thu_Open__c</fullName>
    <defaultValue>TimeValue(&quot;07:00:00.000&quot;)</defaultValue>
    <label>Thu Open</label>
    <type>Time</type>
</CustomField>