force-app/main/default/objects/Service_Agreement__c/fields/Tied_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Tied_to_Partner__c</fullName>
    <formula>IF(!ISBLANK(Referral_Partner__c) &amp;&amp; Referral_Partner__r.RecordType.Name  = &apos;Partner&apos;,  Referral_Partner__r.Name,
IF(!ISBLANK(Bill_to_Account__c) &amp;&amp; Bill_to_Account__r.RecordType.Name = &apos;Partner&apos;, Bill_to_Account__r.Name,
&apos;No Referral&apos;)
)</formula>
    <label>Tied to Partner</label>
    <type>Text</type>
</CustomField>