force-app/main/default/objects/Service_Agreement__c/fields/Tier_1_Active__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Active__c</fullName>
    <formula>if (ISpickval(Tier_Status__c,&quot;Tier 1&quot;) &amp;&amp; Ispickval(CallRevu_Account_Status__c,&quot;Active&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 1 Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>