force-app/main/default/objects/Service_Agreement__c/fields/Tier_2_account_status__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_account_status__c</fullName>
    <label>Tier 2 account status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>