force-app/main/default/objects/Service_Agreement__c/fields/Tier_2_Active__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Active__c</fullName>
    <formula>IF(
  AND(
    OR(
      ISPICKVAL(Tier_Status__c, &quot;Tier 2&quot;),
      ISPICKVAL(Tier_Status__c, &quot;Team Velocity&quot;)
    ),
    NOT(ISPICKVAL(CallRevu_Account_Status__c, &quot;Cancelled&quot;))
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 2 Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>