force-app/main/default/objects/Service_Agreement__c/fields/Tier_2_Pending_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Pending_Cancellation__c</fullName>
    <formula>if (ISpickval(Tier_Status__c,&quot;Tier 2&quot;) &amp;&amp; Ispickval(CallRevu_Account_Status__c,&quot;Pending Cancellation&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 2 Pending Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>