force-app/main/default/objects/Service_Agreement__c/fields/Tier_3_Active__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Active__c</fullName>
    <formula>if (NOT(ISpickval(Tier_Status__c,&quot;Tier 2&quot;)) &amp;&amp; NOT(ISpickval(Tier_Status__c,&quot;Tier 1&quot;)) &amp;&amp; NOT(ISpickval(Tier_Status__c,&quot;Team Velocity&quot;)) &amp;&amp; NOT(ISpickval(Tier_Status__c,&quot;CallSource&quot;)) &amp;&amp; NOT(ISpickval(Tier_Status__c,&quot;TCX&quot;)) &amp;&amp; NOT(ISpickval(Tier_Status__c,&quot;Auto Alert&quot;))
 &amp;&amp; NOT(Ispickval(CallRevu_Account_Status__c,&quot;Cancelled&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 3 Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>