force-app/main/default/objects/Service_Agreement__c/fields/Tier_3_Pending_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Pending_Cancellation__c</fullName>
    <formula>if (ISpickval(Tier_Status__c,&quot;Tier 3&quot;) &amp;&amp; Ispickval(CallRevu_Account_Status__c,&quot;Pending Cancellation&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 3 Pending Cancellation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>