force-app/main/default/objects/Service_Agreement__c/fields/Tier_Status__c.field-meta.xml
<CustomField>
    <fullName>Tier_Status__c</fullName>
    <label>Tier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 3</fullName>
                <default>true</default>
                <label>Tier 3</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 3 Tracking</fullName>
            </value>
            <value>
                <fullName>Tier 3 Temp-Tracking</fullName>
            </value>
            <value>
                <fullName>CallSource</fullName>
            </value>
            <value>
                <fullName>TCX</fullName>
            </value>
            <value>
                <fullName>Auto Alert</fullName>
            </value>
            <value>
                <fullName>Team Velocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>