force-app/main/default/objects/Service_Agreement__c/fields/Transcribe_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Transcribe_Start_Date__c</fullName>
    <label>Transcribe Start Date</label>
    <type>Date</type>
</CustomField>