force-app/main/default/objects/Service_Agreement__c/fields/Transition_to_Launch_Email__c.field-meta.xml
<CustomField>
    <fullName>Transition_to_Launch_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transition to Launch Email</label>
    <type>Checkbox</type>
</CustomField>