force-app/main/default/objects/Service_Agreement__c/fields/Trial_Count__c.field-meta.xml
<CustomField>
    <fullName>Trial_Count__c</fullName>
    <label>Trial Count</label>
    <summaryFilterItems>
        <field>Service_Agreement_Products__c.Name</field>
        <operation>equals</operation>
        <value>TRIAL-SVR-CI</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Service_Agreement_Products__c.Pending_Expiration__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Agreement_Products__c.CallRevu_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>